@@ -34,7 +34,7 @@ module Cucumber
       end
 
       def Scenario(name, &proc)
-        _, line, _ = *caller[0].split(':')
+        line = caller[0] =~ /:(\d+)$/ ? $1 : nil
         add_scenario(name, line, &proc)
       end
 
@@ -42,6 +42,7 @@ module Cucumber
         table = Table.new(matrix)
         proc.call(table)
         template_scenario = @scenarios.last
+        template_scenario.table_header = matrix[0]
         matrix[1..-1].each do |row|
           add_row_scenario(template_scenario, row, row.line)
         end
